<?xml version="1.0"?>
<package format="2">
  <name>ur_gazebo</name>
  <version>1.1.6</version>
  <description>
      Gazebo wrapper for the Universal UR5/10 robot arms.
  </description>

  <author>Alexander Bubeck</author>
  <author email="sedwards@swri.org">Shaun Edwards</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ur_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
